Fix scrollbar not showing up for Youtube sidebar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -679,10 +679,12 @@ body {
 
 .youtube-videos {
     background-color: #444;
+    height: 100%;
     list-style: none;
     margin-left: 50px;
     margin-top: 0;
     min-width: 350px;
+    overflow-y: scroll;
     padding: 10px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
